--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.8'
 
 services:
   db:
-    image: mysql:5.7
+    image: mysql/mysql-server:8.0
+    platform: linux/amd64
     volumes:
       - db_data:/var/lib/mysql
     restart: always
@@ -16,6 +17,7 @@ services:
     depends_on:
       - db
     image: wordpress:latest
+    platform: linux/amd64
     ports:
       - "8000:80"
     restart: always
